k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: payment-system-ingress
  namespace: payment-system
spec:
  ingressClassName: nginx

  rules:
    - host: payment-system.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8100
